# ChangeLog for app-emacs/php-mode
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/php-mode/ChangeLog,v 1.32 2009/11/24 21:09:12 fauli Exp $

  24 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  php-mode-1.5.0.ebuild:
  import changes from Prefix overlay

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -php-mode-1.2.0.ebuild:
  clean up

  13 Dec 2008; Ulrich Mueller <ulm@gentoo.org>
  -files/php-mode-1.4.0_beta-conditional-key.patch,
  -files/php-mode-info-direntry.patch, -php-mode-1.4.0_beta.ebuild:
  Remove intermediate version.

  13 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  php-mode-1.5.0.ebuild:
  ppc stable, bug #250219

  12 Dec 2008; Raúl Porcel <armin76@gentoo.org> php-mode-1.5.0.ebuild:
  x86 stable wrt #250219

  08 Dec 2008; Tiago Cunha <tcunha@gentoo.org> php-mode-1.5.0.ebuild:
  stable amd64, bug 250219

  08 Dec 2008; Brent Baude <ranger@gentoo.org> php-mode-1.5.0.ebuild:
  stable ppc64, bug 250219

*php-mode-1.5.0 (06 Nov 2008)

  06 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +php-mode-1.5.0.ebuild:
  Version bump.

*php-mode-1.4.0_beta (01 Jan 2008)

  01 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/php-mode-1.4.0_beta-conditional-key.patch,
  +files/php-mode-info-direntry.patch, +php-mode-1.4.0_beta.ebuild:
  Version bump, thanks Flameeyes. Install GNU info file, FDL added to LICENSE.

  15 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -files/50php-mode-gentoo.el,
  -php-mode-1.1.0.ebuild:
  Remove old.

  06 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  php-mode-1.2.0.ebuild:
  stable amd64 (bug 195020)

  11 Oct 2007; Tom Gall <tgall@gentoo.org> php-mode-1.2.0.ebuild:
  stable on ppc64, bug #195020

  09 Oct 2007; Lars Weiler <pylon@gentoo.org> php-mode-1.2.0.ebuild:
  stable ppc, bug #195020

  07 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  php-mode-1.2.0.ebuild:
  stable x86, bug 195020
