@@ -1,25 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 51php-mode-gentoo.el 325 SHA256 10e4a4a8755548ce359839a0b35ee2eb2557b4d061b04827fbe72097d9047a3b SHA512 78d58bc3b1f7c99c7a753d1938b08be3938e0c9a9f81baa3392d653fc06d9eb9cdccbde9608474977d913b2be1c0667c097b841e8ae844ec46bd19989620ece0 WHIRLPOOL 55ed16211ff3540040b9d402652467bc20af6ade8e6147b78385b980520a2d70fd98c755d34d273684403d04509f8c2f1644d909a7a55023eb63fdf1d1eaf11a
+AUX 50php-mode-gentoo.el 286 SHA256 1672449466bc724544f7019e4e3af429c173d7263b5b7b205c409fa79a04bd25 SHA512 5f6205a7f3300d02b612a0aba58566dba1ad2a5f090c827c7d2d740af9c425cccb8384b37ac81e05eb81b4e31e649726433105b9862b92913e56752c554eec93 WHIRLPOOL 67486620f577c05d0c95af3c20450d9fa14dc32dbb1f32360501f1cccb7ad04573e09e20d52576c0983246155ede5819dcfaf9a82bbe973c146dc8135effd80e
 DIST php-mode-1.5.0.tar.gz 42687 SHA256 d8b179941141994d9cc9e77d244e91df3b4d845f4c6e1818eeefc59bc97bcead SHA512 e05cf9eeff3d17f6af29b03d08f279e4c04f79a2c018de5ddcf097adbf9e67978eeb9f0f9e67b9406c1f33c494597ab1bfa629bdab131d668de40b81d68e796f WHIRLPOOL fd5a92af5c006abc00d10803770a64452f49d803c16c3b57a77f3f87ebf984ad3db951304d6ece9fad395cd46ac4a0e7ec2d256e3dbe7c75d68b276bc178ab74
-EBUILD php-mode-1.5.0.ebuild 726 SHA256 a9bebac0c256f996bfd50e920723565c63ed7361afcfd7567b2eb548a468b35b SHA512 17010bcd8f2097194cd4d1e996c3ea5c2c8e9c91cbb81045a3b1e40e5cee07cc4d1c57d91d861c979b4ca82fda9301e9376de227ead12fc9ba7daccb7d779af2 WHIRLPOOL b240cf2f4c5572cc277db46259f763b08e6c272b94f490e47ea26578c3aecb89d173f34b1ecf6184a5771d8dd2851ae0342c54159ef2fb2ff05ea4e67faa93c6
-MISC ChangeLog 3910 SHA256 100cc801ee5d091e344af9825d138e926e56db735b13e7b846d9af71269a676f SHA512 3717d8589ee9a21b9d5deb61e517757958a8a4c99210925f311d182ca8e24ae7c41cd7591e0a11303bd80c83996579c376ba33bfabc9873afcc73b474bcab456 WHIRLPOOL 6b426c7c7fb78727b67df27f0fcc4a913943a0cedf2a99d86917a372317fca60561716a3e72b3f769933a95de4b3f173c54c77736b40028ed421adfbb673b47a
+EBUILD php-mode-1.5.0.ebuild 590 SHA256 7b12b55354fce0a7540d6cc636dd15ce355c7d509c0e3ed93ac51c9b3673aee4 SHA512 dc92d6d14730602023da0fbb42ca042eac1f1de957c21879b40f91ea8883a960c0f005bb570201bf6ef52ee605b586cb79b9ca7c7322aa4fcd8821bbfc7b7d3f WHIRLPOOL e2b1d86bda24e898276d9d1d95f486d63cbf7e1ac5cb7992fd3bea88d1d376a1f2dfa94d4899b1565ac7a37dff3206aec41f0ffb69cb1a3b77f4f34b6e529292
+MISC ChangeLog 4139 SHA256 2dc4ea72f39e8b3bc042fcf1aa4129fb7279f138cc8cb74d8d029b89a3dd1441 SHA512 84c3e37d3ff5a91716f494d6f807cf90bcaf6d364c483344857a6df2436dc338ce33705a0ab0dcc43f8a83c00d0e0be76bc176c22042c624fa211391799e99c9 WHIRLPOOL 60510782df66adcd089380954e2cd401f7e48442287cf10433dcf9909e60818b06358c17a67496a7c5c52dcc25fa7960d681c9e5aa744ac9a3a2302dd9a24602
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fKZAAoJEDxpGckxwJCBJ78P/07kLVxdZJKIhQ9jbRopIPAP
-GeYcSN9gTVVB93Vq/GnJda/S16adv7xnIwlVGoyNfSFPXPkwb7wT/qgq874nI0Aa
-Q8Mq+E+avKclgVAN99uU7wxZHJejnijaR13Wmr2CKsxqIfUhO7QHa91PZYJkOJ3y
-napu7r2V9w31WWLD/5Wn0/irtMQLAbJT7LvRIwCfcO3Sbr9rvHt5ah/gK2gFa58O
-vuVrkiI5VmbDn42WdcN0RidGDiIWpaHxQGXec60GdouojmJF+8dDnAFav+8QDoOz
-Dl1ttOjkYT198i3AUQUhXshhMf3DTHrAPSbJVTvU/zXOGf+6dXzR9zjKtS20PRhc
-HOFQbT/z5SZ2QaX/kasaVRtRDesiTL61QR303kA9o/mNsTIc6GVuAh0+tt6PRZmR
-F7x8RioddOhH3bMPI0pplIJfrtYYOpeVm+RggqDQj+lofPu/+9HcdQgSRHppkgyi
-+9495rH/MewV6HcVOIxKV7z1rsiJ7c9rM7v8CP7a28CyA6lHAG08CU8IS+9vu4Gh
-Ud01xaVjVC6BEAZjhusq3DxHz+wW3M+igtdHxvdepTOzrILMHH4iYRUTidelaOuY
-OO4YBDV1S9yKwsRWOFkAz6xlyqy9w2mhE0HpZaOU3ljyjkJV4yZDrQpJpsJ2lnz9
-Mnre2pbdGS8MtbxFLKVb
-=/OtE
+iQGcBAEBCAAGBQJTCcGyAAoJEJQzkH1pP7W445cL/iMAAdElaz8L/iaXEp5801LY
+XcW0kmAVR1mk+yrBEUrWa3HsonTj8msoRe03wPot/sTYgtiZFmrqJFovqgNuJBD5
+HIZyPQFEH1wViRCwRWoqAG3HT++4rPDGVjO3YH02qRvCo7ZiRVs7LSzPdmMVB2/Y
+1aPwVLpTi9jMkK0h+13OjainVauDSBaAVLa8vYLwo48TyGLUUoZMlo8zHTAKkPfZ
+dr598kVznKkQes2ARSyMQC9fWQsT71h6v4CJsCD3b0z+/TO07PYNw8YrmghIUiOu
+sskoXffogU89I8WuKtv17qgF1CAsOqjxeiuLVzVS56vTOpjFz4GFtl2JMIqF2jG7
+Je65ar+Z3OrTApBLeBde0VFfdlVeyoAdKb3EOd0q9Z87Ag7g2E/G0NMNu0313bHp
+zda074dt0IaJWDAwpXdceTTOBnJulL/vFu4oSPs8N/fqd8OH+wGhN8MD8jRLTb7/
+6MdfNjn/ex0aySgLhxrFz7v9WLvlrM6/Wtn5Z+P0eA==
+=8Trq
 -----END PGP SIGNATURE-----
