@@ -1,6 +1,3 @@
-
-;;; php-mode site-lisp configuration
-
 (add-to-list 'load-path "@SITELISP@")
 (autoload 'php-mode "php-mode" "Major mode for editing PHP code." t)
 (add-to-list 'auto-mode-alist '("\\.php[s34]?\\'" . php-mode))
